user can view most dangerous spec passing

--- a/app/views/most_dangerous_day/index.html.erb
+++ b/app/views/most_dangerous_day/index.html.erb
@@ -1,3 +1,11 @@
 <h3>Most Dangerous Day</h3>
 
 <%= @start_date %> - <%= @end_date %>
+
+<p>Beware of: <%= @most_dangerous_day %></p>
+<ul>
+  <% @asteroids.each do |asteroid| %>
+  <li>Name: <%= asteroid.name %></li>
+  <li>NEO Reference ID: <%= asteroid.neo_reference_id %></li><br><br>
+  <% end %>
+</ul>
