add vcr, webmock, and write nasa service spec

--- a/app/views/most_dangerous_day/index.html.erb
+++ b/app/views/most_dangerous_day/index.html.erb
@@ -1,6 +1,6 @@
 <h3>Most Dangerous Day</h3>
 
-<%= @start_date %> - <%= @end_date %>
+<%= @start_range %> - <%= @end_range %>
 
 <p>Beware of: <%= @most_dangerous_day %></p>
 <ul>
